src/components/BodyPart/AllDishes/ItemBlock/index.module.scss
@use '/src/mixins.scss';

.itemBlock {
  height: 8rem;
  width: 100%;
  @include mixins.tablet {
    width: calc(100% / 2);
  }
  @include mixins.pc {
    width: calc(100% / 3);
  }
  @include mixins.pc-wide {
    width: calc(100% / 4);
  }

  border-radius: 1rem;

  position: relative;

  text-align: unset;

  transition-property: background-color;
  transition-duration: 0.8s;
  transition-timing-function: ease-out;

  &:hover {
    background-color: rgb(229 231 235);
  }

  & > .itemBlockContentBtn {
    @include mixins.button;

    height: 100%;

    padding: 1rem 0.5rem;

    display: flex;

    & > .itemImg {
      height: 100%;
      aspect-ratio: 1/1;

      padding: 0.8rem;
      border-radius: 20%;

      background-color: white;

      box-shadow: 0 0 1rem 0 #ccc;
    }

    & > .detail {
      height: 100%;
      width: 100%;
      min-width: 0;

      margin-left: 1.5rem;

      display: flex;
      flex-direction: column;

      text-overflow: ellipsis;

      & > .title {
        margin-bottom: 0.5rem;

        font-size: large;
      }

      & > .categoryAndChef {
        min-width: 0;

        flex-grow: 1;

        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }

      & > .timeAndPrice {
        height: 1.3rem;

        display: flex;
        justify-content: space-between;

        vertical-align: middle;

        & > .time {
          @include mixins.flex-and-center;

          & > img {
            height: 100%;
          }
        }

        & > .price {
          display: flex;
        }
      }
    }
  }

  & > .checkmark {
    width: 100%;
    height: 100%;

    position: absolute;
    top: 0;
    display: none;

    border-radius: 1rem;

    background-color: #00ab41;

    & > svg {
      width: 56px;
      height: 56px;
      border-radius: 50%;
      display: block;
      stroke-width: 2;
      stroke: #fff;
      stroke-miterlimit: 10;
      margin: 10% auto;
      box-shadow: inset 0px 0px 0px #7ac142;
      animation: fill 0.4s ease-in-out 0.4s forwards,
        scale 0.3s ease-in-out 0.9s both;

      & > circle {
        stroke-dasharray: 166;
        stroke-dashoffset: 166;
        stroke-width: 2;
        stroke-miterlimit: 10;
        stroke: #7ac142;
        fill: none;
        animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
      }

      & > path {
        transform-origin: 50% 50%;
        stroke-dasharray: 48;
        stroke-dashoffset: 48;
        animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
      }

      @keyframes stroke {
        100% {
          stroke-dashoffset: 0;
        }
      }
      @keyframes scale {
        0%,
        100% {
          transform: none;
        }
        50% {
          transform: scale(1.1);
        }
      }
      @keyframes fill {
        100% {
          box-shadow: inset 0px 0px 0px 30px #7ac142;
        }
      }
    }
  }
}

